@@ -2,6 +2,7 @@ mlr_2.2
 - basic R learners now have new slots: name (a descriptive name of the algorithm), 
   short.name (abbreviation that can be used in plots and tables) and note 
   (notes regarding slight changes for the mlr integration of the learner and such).
+- fix a bug in "smote" when only factor features are present
 
 - new learners:
 -- classif.lqa
